--- a/lab_01/intro_to_html/1.html
+++ b/lab_01/intro_to_html/1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Gubayev Alikhan</h1>
+    <h1>Aliya Dauytova</h1>
     <p><br />Hello <br />Hello</p>
   </body>
 </html>
