--- a/lab_03/second task/index.html
+++ b/lab_03/second task/index.html
@@ -4,9 +4,7 @@
         <title>To Do app</title>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="main.css" />
-        <script
-        src="https://kit.fontawesome.com/7184df81b9.js"
-        crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/b51ff12bb1.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
