--- a/lab_03/second task/index.html
+++ b/lab_03/second task/index.html
@@ -16,6 +16,7 @@
             <p>ToDo List</p>
             <div class="container-newtask">
               <input type="text" placeholder="New Task" id="newtask-todo" />
+              <input type="date"/>
               <button id="button-todo">Add</button>
             </div>
             <div class="container1">
